# bahama-mama-telemetry

./: .gitignore  .gitmodules  LICENSE  README.md
code/: CMakeLists.txt  main.c  sdkconfig
code/c/: CMakeLists.txt  hw_config.c  lwipopts.h  main.c
code/c/adc_coll/: adc_coll.c  adc_coll.h
code/c/adc_collector/: adc_collector.c  adc_collector.h
code/c/data_collector/: data_collector.c  data_collector.h
code/c/gps_coll/: gps_coll.c  gps_coll.h
code/c/gps_collector/: gps_collector.c  gps_collector.h  gps_fifo.c  gps_fifo.h
code/c/sd_if/: sd_if.c  sd_if.h
code/main/: main.c
code/py/: .gitignore  README.md  add_bike.ui  bmt.py  bmt.ui  bmt_add_bike.py  bmt_add_sensor.py  bmt_add_session.py  bmt_add_setup.py  bmt_calculations.py  bmt_db.py  bmt_formats.py  bmt_old_session.py  bmt_read_file.py  bmt_visualization.py  leverage.py  new_sensor.ui  read_bmt_file.py  requirements.txt  sag_calculations.py
code/py/ui_files/: add_bike.ui  add_sensor.ui  add_session.ui  create_setup.ui  old_session.ui
docs/design/: .gitignore  README.md  bmt_components.plantuml  bmt_evaluation_components.puml  classes.plantuml  db.puml
docs/formats/: formats.md  sensor_calib_format.puml
docs/structure/: README.md  bmt_components.txt
